fixed pack.json and added dates on comments

--- a/views/partials/post-item.handlebars
+++ b/views/partials/post-item.handlebars
@@ -20,7 +20,7 @@
 
         <div class="loaded-comments-container">
             {{#each comments as |comment|}}
-            <p class="loaded-comments">{{user.name}}: {{comment.text}}</p>
+            <p class="loaded-comments"> {{format_date comment.date_created}} {{user.name}}: {{comment.text}}</p>
             {{/each}}
         </div>
         
