--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,26 +1,36 @@
-                     
-                        <form id="profile-form-style" class="form edit-post-form">
-                            <h1>Edit your post</h1>
-                            <i class="material-icons" id="delete-btn" data-id="{{id}}">delete</i>
-                            <input class="post-title" id="post-name" type="text"  value="{{post_title}}" />
-                            <textarea class="post-content" id="post-desc" type="text" >{{post_content}}</textarea>
-                            <button type="submit" data-id="{{id}}" id="update-post">Update post</button>
-                    
+<form id="profile-form-style" class="form edit-post-form">
+  <h1>Edit your post</h1>
+  <i class="material-icons" id="delete-btn" data-id="{{id}}">delete</i>
+  <input class="post-title" id="post-name" type="text" value="{{post_title}}" />
+  <textarea
+    class="post-content"
+    id="post-desc"
+    type="text"
+  >{{post_content}}</textarea>
+  <button type="submit" data-id="{{id}}" id="update-post">Update post</button>
 
-                        </form>    
+</form>
 
-                              <div class="comment-section" id="comment-section">
-                                <div>
-                                    <input class="create-comment" id="comment_{{id}}" type="text" placeholder="Create your own comment" />
-                                    <button type="button" class="new-comment-form" id="comment_button_{{id}}">Create</button>
-                                </div>
-                                
+<div class="comment-section" id="comment-section">
+  <div>
+    <input
+      class="create-comment"
+      id="comment_{{id}}"
+      type="text"
+      placeholder="Create your own comment"
+    />
+    <button
+      type="button"
+      class="new-comment-form"
+      id="comment_button_{{id}}"
+    >Create</button>
+  </div>
 
-                                <div class="loaded-comments-container">
-                                
-                                        {{#each post.comments as |comment|}}
-                                            <p class="loaded-comments">{{comment.user.name}}: {{comment.text}}</p>
-                                        {{/each}}                            
-                                </div>
-                
-                        </div>
+  <div class="loaded-comments-container">
+
+    {{#each post.comments as |comment|}}
+      <p class="loaded-comments">{{comment.user.name}}: {{comment.text}}</p>
+    {{/each}}
+  </div>
+
+</div>
