edited update postroute in api

--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,6 +1,6 @@
 <form id="profile-form-style" class="form edit-post-form">
   <h1>Edit your post</h1>
-  <i class="material-icons" id="delete-btn" data-id="{{id}}">delete</i>
+  <button id="delete-btn" data-id="{{id}}">Delete</button>
   <input class="post-title" id="post-name" type="text" value="{{post_title}}" />
   <textarea
     class="post-content"
