--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,8 +34,7 @@
     {{{body}}}
 
    <footer>
-    <p>Created By: Team Oracle</p>
-    <p>Check out this project on GitHub: <a href="https://github.com/Charl1410/tech-blog" >Team Oracle GitHub</a> </p>
+    <p>Created by: Jordan Gibbs</p>
 
    </footer>
        
