edited CSS styling

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,5 @@
 <div class="title">
+    <p class="blog">T E C H  B L O G</p>
          <img id="logo" src = "./images/logo.png"> 
 
             {{#if logged_in}}
