--- a/public/homepage.css
+++ b/public/homepage.css
@@ -1,392 +1,341 @@
-* {margin:0;
-padding:0;
-background-color: rgb(234, 246, 246);
+* {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(234, 246, 246);
 }
-
 
 .material-symbols-outlined {
-    
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48;
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 
   background-color: rgb(213, 233, 233);
-  
 }
 
-.d-flex, .title, .card, footer, .create-post, .log-in-body, #body-container, .comment-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-
-#logo {
-   height:28vh;
-   width:64vh; 
-}
-
-.logo-dark {
-    color:darkblue;
+.d-flex,
+.title,
+.card,
+footer,
+.create-post,
+.log-in-body,
+#body-container,
+.comment-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 ul {
-    position: fixed;
-    top:0;
-    width:100%;
-    display: flex;
-    list-style: none;
-    justify-content: center;
-    align-items: center;
-    height: 5vh;
-    background-color: rgb(213, 233, 233);
-    opacity: 70%;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  height: 5vh;
+  background-color: rgb(213, 233, 233);
+  opacity: 70%;
 }
 
 nav li {
-    text-decoration: none;
-    border-radius: 10px;
-    text-align: center;
-    font-size: 100%;
-    margin-left: 9%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    background-color:rgb(213, 233, 233) ;
+  text-decoration: none;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 100%;
+  margin-left: 9%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(213, 233, 233);
 }
 
 nav li a {
-    text-decoration: none;
-    color: black;
-    background-color: rgb(213, 233, 233);
+  text-decoration: none;
+  color: black;
+  background-color: rgb(213, 233, 233);
 }
 
-
 nav {
-    border-bottom: dotted 1px rgb(102, 191, 191);
+  border-bottom: dotted 1px rgb(102, 191, 191);
 }
 
 .title {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 150;
-    color: rgb(102, 191, 191);
-    height:50vh;
-}
-
-.mono-font {
-    font-size: 500%;
-}
-
-.monospace {
-    font-family: 'Source Code Pro', monospace;
-
-
-
-}
-
-.card {
-    width:35%;
-    margin:1%;
-    border: solid 5px white;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    flex-direction: column;
-    text-align: center;
-    padding:3%;
-    box-shadow: 10px 0 10px 0 grey;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    transform: scale(1.5);
-
-}
-
-.card-container{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: rgb(213, 233, 233);
-    border-radius: 10px;
-      
+  font-family: "Edu VIC WA NT Beginner", cursive;
+  font-weight: 150;
+  color: rgb(102, 191, 191);
+  height: 50vh;
 }
 
 .blog-title {
-    font-size: 250%;
-    padding:2%;
+  font-size: 300%;
+}
+
+.blog {
+  font-size: 400%;
+}
+
+.mono-font {
+  font-size: 500%;
+}
+
+.monospace {
+  font-family: "Source Code Pro", monospace;
+}
+
+.card {
+  width: 20%;
+  margin: 1%;
+  border-radius: 10px;
+  flex-direction: column;
+  text-align: center;
+  padding: 3%;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
+    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+a {
+  text-decoration: none;
+}
+
+.card-container,
+.title,
+nav,
+.d-flex,
+.blog,
+#body-container,
+.saved-post-container {
+  background-image: url(https://hougumlaw.com/wp-content/uploads/2016/05/light-website-backgrounds-light-color-background-images-light-color-background-images-for-website-1024x640.jpg);
+  background-attachment: fixed;
+  background-repeat: repeat;
+  background-size: cover;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.blog-title {
+  font-size: 300%;
+  padding: 2%;
 }
 
 .posted-by {
-    font-size: 150%;
-}
-
-.interaction-bar {
-
+  font-size: 150%;
 }
 
 .comment-section {
-    border-top: solid 2px white;
-    width:80%;
-    padding:3%;
-    margin-top:2%;
-    display: none;
+  border-top: solid 2px white;
+  width: 80%;
+  padding: 3%;
+  margin-top: 2%;
+  display: none;
 }
 
 .spacing {
-    margin: 1%;
+  margin: 1%;
 }
 
 .margin {
-    margin-top: 5%;
+  margin-top: 5%;
 }
 
 .new-comment-form {
-    margin-top: 5%;
+  margin-top: 5%;
 }
 
 .loaded-comments {
-    border-bottom: solid 1px rgb(203, 200, 200);
-    margin-top:5%;
-
-
+  border-bottom: solid 1px rgb(53, 185, 188);
+  padding: 1%;
+  border-radius: 10px;
+  margin-top: 5%;
 }
 
 ul:hover {
-    opacity:100%;
+  opacity: 100%;
 }
-
 
 .card:hover {
-    transform: scale(1.1);
-    cursor: pointer;
+  transform: scale(1.1);
+  cursor: pointer;
 }
-
 
 button:hover {
-    transform: scale(1.1);
-    background-image: linear-gradient(#7acab6, #657e9c)
-
+  transform: scale(1.1);
+  background-image: linear-gradient(#362fd9, #3c84ab);
+  color: white;
 }
 
- nav li:hover {
-    transform: scale(1.3);
+nav li:hover {
+  transform: scale(1.3);
 }
-
-/* a:hover {
-    background-color:rgb(102, 191, 191) ;
-} */
 
 footer {
-    height: 20vh;
-    text-align: center;
-    font-family: 'Source Code Pro', monospace;
-    
+  height: 20vh;
+  text-align: center;
+  font-family: "Source Code Pro", monospace;
 }
 
 .contact-us {
-    height:10vh;
-    width: 30%;
-    border: solid 2px black;
+  height: 10vh;
+  width: 30%;
+  border: solid 2px black;
 }
 
 textarea {
-    width: 80%;
+  width: 80%;
 }
-
-
-
 
 @media screen and (max-width: 768px) {
-    .card {
-        width: 80%;
-        
-    }
-
+  .card {
+    width: 80%;
+  }
 }
 
-/* profile styles*/
-
-#body-container{
-    display:flex;
-
+#body-container {
+  display: flex;
 }
 
 .profile-name {
-    font-size: 300%;
+  font-size: 300%;
 }
 
 .aside-left {
-    border:solid 5px rgb(255, 255, 255);
-    border-radius: 20px;
-    width:80%;
-    padding:2%;
-    margin-top:5%;
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-
+  border: solid 5px rgb(255, 255, 255);
+  border-radius: 20px;
+  width: 80%;
+  padding: 2%;
+  margin-top: 5%;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
 }
 
-.profile-header, .saved-posts{
-    height: 10vh;
-    width:100%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom:5%;
-
+.profile-header,
+.saved-posts {
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
 }
 
-.profile-info{
-    height: 20vh;
-    width:100%;
-    margin:1%;
-    display: flex;
-    justify-content: center;
+.profile-info {
+  height: 20vh;
+  width: 100%;
+  margin: 1%;
+  display: flex;
+  justify-content: center;
 }
 
 .profile-post-container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.profile-text {
-    font-size: 200%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .saved-post-container {
-    width:100%;
-    /* border: solid 2px black; */
-    margin:1%
-
+  width: 100%;
+  margin: 1%;
 }
 
 .create-post {
-    /* border: solid 5px white; */
-    background-color: #dbf2f2;
-    border-radius: 10px;
-    padding:2%;
-    margin-bottom: 2%;
-
+  background-color: #dbf2f2;
+  width: 100%;
+  border-radius: 10px;
+  padding: 2%;
+  margin-bottom: 2%;
 }
 
 .post-title {
-    padding:2%;
-    margin-bottom: 2%;
-    width:80%;
+  padding: 2%;
+  margin-bottom: 2%;
+  width: 80%;
 }
 
-.post-content  {
-        width:100%;
-        resize: vertical;
-        padding:15px;
-        border-radius:15px;
-        border:0;
-        box-shadow:4px 4px 10px grey;
-        height:150px;
-        width:80%;
-      }
+.post-content {
+  width: 100%;
+  resize: vertical;
+  padding: 15px;
+  border-radius: 15px;
+  border: 0;
+  box-shadow: 4px 4px 10px grey;
+  height: 150px;
+  width: 80%;
+}
 
 input {
-   
-        width:100%;
-        resize: vertical;
-        padding:15px;
-        border-radius:15px;
-        border:0;
-        box-shadow:4px 4px 10px gray;
-        height:10px;
-      }
+  width: 100%;
+  resize: vertical;
+  padding: 15px;
+  border-radius: 15px;
+  border: 0;
+  box-shadow: 4px 4px 10px gray;
+  height: 10px;
+}
 
 button {
-  background-image: linear-gradient(#0dccea, #0d70ea);
+  background-image: linear-gradient(#defcf9, #85cdfd);
   border: 0;
   border-radius: 10px;
   box-sizing: border-box;
-  color: #fff;
+  color: black;
   cursor: pointer;
-  font-family: Montserrat,sans-serif;
-  font-size: .9em;
-  margin: 5px;
+  font-family: "Edu VIC WA NT Beginner", cursive;
+  font-size: 0.9em;
+  margin: 10px;
   padding: 10px 15px;
   text-align: center;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  
 }
-
-
-/* log in page css */
 
 .container {
-    margin: auto;
-    width: 500px;
-    max-width: 90%;
-  }
-  
-  .container form {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    background-color: white;
-    border-radius: 4px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 24px;
-    color: #222;
-  }
-  
-/* Sign up page css*/
+  margin: auto;
+  width: 500px;
+  max-width: 90%;
+}
 
-.mainsignup-container {
-  width: 330px;
-  padding: 2rem 1rem;
-  margin: 50px auto;
+.container form {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 4px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+h1 {
   text-align: center;
-  box-shadow: 0 20px 35px rgba(red, green, blue, alpha);
+  margin-bottom: 24px;
+  color: #222;
 }
 
-#SignUpHeader {
-  font-size: 2rem;
-  color: 1;
-  margin-bottom: 1.2rem;
+#profile-form-style,
+#form-style {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 7%;
+  padding: 3%;
+  border: solid 2px #a1ccc8;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px 10px lightgrey;
+  align-items: center;
+  font-size: 130%;
 }
 
-#profile-form-style, #form-style {
-    margin: 7%;
-    padding: 3%;
-    border: solid 2px #a1ccc8;
-    border-radius: 10px;
-    box-shadow: 10px 10px 10px 10px lightgrey;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    font-size: 130%;
-
+#profile-form-style {
+    width: 100%;
 }
 
 #form-style {
-    width: 35%;
+  width: 35%;
 }
-
-
 
 form input {
   width: 92%;
@@ -398,38 +347,28 @@ form input {
   background: #e4e4e4;
 }
 
-.log-in-body{
-    text-align: center;
+.log-in-body {
+  text-align: center;
 }
-
-.Join {
-  font-size: 15px;
-  height: 10px;
-  margin-top: 1.4rem;
-  color: blue;
-}
-
-/* Log In Styling */
 
 #LogInHeader {
-    font-size: 2rem;
+  font-size: 2rem;
   color: 1;
   margin-bottom: 1.2rem;
 }
 
 @media screen and (max-width: 1000px) {
-    #form-style {
-        width: 80%;
-    }
+  #form-style {
+    width: 80%;
+  }
 
-    .aside-left {
-        font-size: 80%;
-        padding:1%;
-        margin-top: 10%;
-    }
+  .aside-left {
+    font-size: 80%;
+    padding: 1%;
+    margin-top: 10%;
+  }
 
-    .profile-header {
-        margin-top: 10%;
-    }
-
+  .profile-header {
+    margin-top: 10%;
+  }
 }
